Fixed overflow issue for modals.

--- a/less/components/monthly-upgrade.less
+++ b/less/components/monthly-upgrade.less
@@ -1,12 +1,11 @@
 .upgrade-container {
   .modal-container {
     background: #D8D5CC;
-    overflow: hidden;
+    overflow: auto;
   }
   .upgrade-modal {
     background: #FFFFFF;
     padding: 30px;
-    overflow: hidden;
     border-radius: 6px;
     color: #333;
     text-align: center;
